WIP: datametric module, instrument example

--- a/src/instrument-example.ipynb
+++ b/src/instrument-example.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type='CircularGeometry' diameter=90.0\n",
+      "type='RectangularGeometry' angle_height=90.0 angle_width=45.0\n"
+     ]
+    }
+   ],
    "source": [
     "from eose.instruments import  CircularGeometry, RectangularGeometry, BasicSensor\n",
     "\n",
@@ -21,9 +30,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type='BasicSensor' name=None id=None mass=100.5 volume=0.75 power=150.0 orientation=[0, 0, 0, 1] field_of_view=CircularGeometry(type='CircularGeometry', diameter=30.0) data_rate=10.5 bits_per_pixel=16\n",
+      "type='BasicSensor' name=None id=None mass=100.5 volume=0.75 power=150.0 orientation=[0.5, 0.5, 0.5, 0.5] field_of_view=RectangularGeometry(type='RectangularGeometry', angle_height=10.0, angle_width=None) data_rate=50.5 bits_per_pixel=8\n",
+      "type='BasicSensor' name=None id=None mass=100.5 volume=0.75 power=150.0 orientation=[0.5, 0.5, 0.5, 0.5] field_of_view=CircularGeometry(type='CircularGeometry', diameter=30.0) data_rate=50.5 bits_per_pixel=8\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'{\"type\":\"BasicSensor\",\"name\":null,\"id\":null,\"mass\":100.5,\"volume\":0.75,\"power\":150.0,\"orientation\":[0.5,0.5,0.5,0.5],\"field_of_view\":{\"type\":\"CircularGeometry\",\"diameter\":30.0},\"data_rate\":50.5,\"bits_per_pixel\":8}'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Example simple usage of eose-api BasicSensor class\n",
     "\n",
@@ -63,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -2088,7 +2116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -3331,7 +3359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -3432,11 +3460,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"type\":\"BasicSensor\",\"records\":[{\"type\":\"BasicSensor\",\"target\":{\"id\":36,\"crs\":null,\"position\":[-170.0,-40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":37,\"crs\":null,\"position\":[-150.0,-40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":38,\"crs\":null,\"position\":[-130.0,-40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":39,\"crs\":null,\"position\":[-110.0,-40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":40,\"crs\":null,\"position\":[-90.0,-40.0]},\"samples\":[{\"type\":\"BasicSensor\",\"instantaneous_metrics\":[{\"type\":\"BasicSensor\",\"time\":\"2024-01-01T00:51:00Z\",\"incidence_angle\":10.77,\"look_angle\":10.07,\"observation_range\":444.2,\"solar_zenith\":83.95}]}]},{\"type\":\"BasicSensor\",\"target\":{\"id\":41,\"crs\":null,\"position\":[-70.0,-40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":42,\"crs\":null,\"position\":[-50.0,-40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":43,\"crs\":null,\"position\":[-30.0,-40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":44,\"crs\":null,\"position\":[-10.0,-40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":45,\"crs\":null,\"position\":[10.0,-40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":46,\"crs\":null,\"position\":[30.0,-40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":47,\"crs\":null,\"position\":[50.0,-40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":48,\"crs\":null,\"position\":[70.0,-40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":49,\"crs\":null,\"position\":[90.0,-40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":50,\"crs\":null,\"position\":[110.0,-40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":51,\"crs\":null,\"position\":[130.0,-40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":52,\"crs\":null,\"position\":[150.0,-40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":53,\"crs\":null,\"position\":[170.0,-40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":54,\"crs\":null,\"position\":[-170.0,-20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":55,\"crs\":null,\"position\":[-150.0,-20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":56,\"crs\":null,\"position\":[-130.0,-20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":57,\"crs\":null,\"position\":[-110.0,-20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":58,\"crs\":null,\"position\":[-90.0,-20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":59,\"crs\":null,\"position\":[-70.0,-20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":60,\"crs\":null,\"position\":[-50.0,-20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":61,\"crs\":null,\"position\":[-30.0,-20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":62,\"crs\":null,\"position\":[-10.0,-20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":63,\"crs\":null,\"position\":[10.0,-20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":64,\"crs\":null,\"position\":[30.0,-20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":65,\"crs\":null,\"position\":[50.0,-20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":66,\"crs\":null,\"position\":[70.0,-20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":67,\"crs\":null,\"position\":[90.0,-20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":68,\"crs\":null,\"position\":[110.0,-20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":69,\"crs\":null,\"position\":[130.0,-20.0]},\"samples\":[{\"type\":\"BasicSensor\",\"instantaneous_metrics\":[{\"type\":\"BasicSensor\",\"time\":\"2024-01-01T01:58:00Z\",\"incidence_angle\":27.23,\"look_angle\":-25.35,\"observation_range\":487.2,\"solar_zenith\":20.01}]}]},{\"type\":\"BasicSensor\",\"target\":{\"id\":70,\"crs\":null,\"position\":[150.0,-20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":71,\"crs\":null,\"position\":[170.0,-20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":72,\"crs\":null,\"position\":[-170.0,0.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":73,\"crs\":null,\"position\":[-150.0,0.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":74,\"crs\":null,\"position\":[-130.0,0.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":75,\"crs\":null,\"position\":[-110.0,0.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":76,\"crs\":null,\"position\":[-90.0,0.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":77,\"crs\":null,\"position\":[-70.0,0.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":78,\"crs\":null,\"position\":[-50.0,0.0]},\"samples\":[{\"type\":\"BasicSensor\",\"instantaneous_metrics\":[{\"type\":\"BasicSensor\",\"time\":\"2024-01-01T01:05:00Z\",\"incidence_angle\":28.98,\"look_angle\":-26.99,\"observation_range\":486.3,\"solar_zenith\":null},{\"type\":\"BasicSensor\",\"time\":\"2024-01-01T01:06:00Z\",\"incidence_angle\":28.65,\"look_angle\":-26.69,\"observation_range\":484.2,\"solar_zenith\":null}]}]},{\"type\":\"BasicSensor\",\"target\":{\"id\":79,\"crs\":null,\"position\":[-30.0,0.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":80,\"crs\":null,\"position\":[-10.0,0.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":81,\"crs\":null,\"position\":[10.0,0.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":82,\"crs\":null,\"position\":[30.0,0.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":83,\"crs\":null,\"position\":[50.0,0.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":84,\"crs\":null,\"position\":[70.0,0.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":85,\"crs\":null,\"position\":[90.0,0.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":86,\"crs\":null,\"position\":[110.0,0.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":87,\"crs\":null,\"position\":[130.0,0.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":88,\"crs\":null,\"position\":[150.0,0.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":89,\"crs\":null,\"position\":[170.0,0.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":90,\"crs\":null,\"position\":[-170.0,20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":91,\"crs\":null,\"position\":[-150.0,20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":92,\"crs\":null,\"position\":[-130.0,20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":93,\"crs\":null,\"position\":[-110.0,20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":94,\"crs\":null,\"position\":[-90.0,20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":95,\"crs\":null,\"position\":[-70.0,20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":96,\"crs\":null,\"position\":[-50.0,20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":97,\"crs\":null,\"position\":[-30.0,20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":98,\"crs\":null,\"position\":[-10.0,20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":99,\"crs\":null,\"position\":[10.0,20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":100,\"crs\":null,\"position\":[30.0,20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":101,\"crs\":null,\"position\":[50.0,20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":102,\"crs\":null,\"position\":[70.0,20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":103,\"crs\":null,\"position\":[90.0,20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":104,\"crs\":null,\"position\":[110.0,20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":105,\"crs\":null,\"position\":[130.0,20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":106,\"crs\":null,\"position\":[150.0,20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":107,\"crs\":null,\"position\":[170.0,20.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":108,\"crs\":null,\"position\":[-170.0,40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":109,\"crs\":null,\"position\":[-150.0,40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":110,\"crs\":null,\"position\":[-130.0,40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":111,\"crs\":null,\"position\":[-110.0,40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":112,\"crs\":null,\"position\":[-90.0,40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":113,\"crs\":null,\"position\":[-70.0,40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":114,\"crs\":null,\"position\":[-50.0,40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":115,\"crs\":null,\"position\":[-30.0,40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":116,\"crs\":null,\"position\":[-10.0,40.0]},\"samples\":[{\"type\":\"BasicSensor\",\"instantaneous_metrics\":[{\"type\":\"BasicSensor\",\"time\":\"2024-01-01T01:20:00Z\",\"incidence_angle\":21.37,\"look_angle\":-19.99,\"observation_range\":449.6,\"solar_zenith\":null}]}]},{\"type\":\"BasicSensor\",\"target\":{\"id\":117,\"crs\":null,\"position\":[10.0,40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":118,\"crs\":null,\"position\":[30.0,40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":119,\"crs\":null,\"position\":[50.0,40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":120,\"crs\":null,\"position\":[70.0,40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":121,\"crs\":null,\"position\":[90.0,40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":122,\"crs\":null,\"position\":[110.0,40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":123,\"crs\":null,\"position\":[130.0,40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":124,\"crs\":null,\"position\":[150.0,40.0]},\"samples\":[]},{\"type\":\"BasicSensor\",\"target\":{\"id\":125,\"crs\":null,\"position\":[170.0,40.0]},\"samples\":[]}]}'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "request = DataMetricRequest(\n",
     "    sensor=basic_sensor,\n",
@@ -3453,17 +3489,56 @@
     "display(datametric_response.model_dump_json())\n",
     "\n",
     "#datametric_data = datametric_response.as_dataframe()\n",
-    "\n",
     "#display(datametric_data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "display(datametrics_response.records[4].model_dump_json())"
+    "display(datametric_response.model_dump_json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"type\":\"BasicSensor\",\"target\":{\"id\":40,\"crs\":null,\"position\":[-90.0,-40.0]},\"samples\":[{\"type\":\"BasicSensor\",\"instantaneous_metrics\":[{\"type\":\"BasicSensor\",\"time\":\"2024-01-01T00:51:00Z\",\"incidence_angle\":10.77,\"look_angle\":10.07,\"observation_range\":444.2,\"solar_zenith\":83.95}]}]}'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(datametric_response.records[4].model_dump_json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"type\":\"BasicSensor\",\"target\":{\"id\":69,\"crs\":null,\"position\":[130.0,-20.0]},\"samples\":[{\"type\":\"BasicSensor\",\"instantaneous_metrics\":[{\"type\":\"BasicSensor\",\"time\":\"2024-01-01T01:58:00Z\",\"incidence_angle\":27.23,\"look_angle\":-25.35,\"observation_range\":487.2,\"solar_zenith\":20.01}]}]}'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(datametric_response.records[33].model_dump_json())"
    ]
   },
   {
@@ -3471,9 +3546,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "display(datametrics_response.records[33].model_dump_json())"
-   ]
+   "source": []
   }
  ],
  "metadata": {
