WIP: Datametrics module

--- a/src/instrument-example.ipynb
+++ b/src/instrument-example.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,12 +79,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from joblib import Parallel, delayed\n",
+    "\n",
     "import json\n",
     "from datetime import datetime, timedelta, timezone\n",
+    "from shapely.geometry import box, mapping\n",
+    "from scipy.stats import hmean\n",
+    "import pandas as pd\n",
+    "\n",
+    "from astropy.time import Time as AstroPy_Time\n",
     "\n",
     "from pydantic import AwareDatetime\n",
     "\n",
@@ -96,36 +103,45 @@
     "    reduce_observations,\n",
     ")\n",
     "\n",
+    "from eose.propagation import (\n",
+    "    PropagationSample,\n",
+    "    PropagationRecord,\n",
+    "    PropagationRequest,\n",
+    "    PropagationResponse,\n",
+    ")\n",
+    "from eose.orbits import GeneralPerturbationsOrbitState, Propagator\n",
+    "from eose.satellites import Satellite\n",
+    "from eose.utils import CartesianReferenceFrame\n",
+    "\n",
+    "from eose.access import (\n",
+    "    AccessSample,\n",
+    "    AccessRecord,\n",
+    "    AccessRequest,\n",
+    "    AccessResponse,\n",
+    ")\n",
+    "from eose.grids import UniformAngularGrid\n",
+    "\n",
+    "\n",
     "from instrupy.basic_sensor_model import BasicSensorModel as InstruPy_BasicSensorModel\n",
     "from instrupy import Instrument as InstruPy_Instrument\n",
     "\n",
     "from eose.instruments import CircularGeometry, BasicSensor\n",
     "from eose.datametrics import DataMetricsRequest, BasicSensorDataMetricsInstantaneous, DataMetricsSample, DataMetricsRecord, DataMetricsResponse\n",
-    "from eose.propagation import PropagationRecord, PropagationRequest, PropagationResponse\n",
-    "from eose.orbits import GeneralPerturbationsOrbitState\n",
-    "from eose.utils import CartesianReferenceFrame, FixedOrientation\n",
-    "from eose.coverage import (\n",
-    "    CoverageRecord,\n",
-    "    CoverageRequest,\n",
-    "    CoverageResponse,\n",
-    "    CoverageSample,\n",
-    ")\n",
-    "from eose.grids import UniformAngularGrid\n",
-    "from eose.satellites import Satellite\n",
     "\n",
-    "from shapely.geometry import box, mapping\n",
-    "from joblib import Parallel, delayed\n",
-    "from scipy.stats import hmean\n",
-    "import pandas as pd\n",
-    "\n",
-    "from astropy.time import Time as AstroPy_Time\n",
     "\n",
     "pd.set_option('display.max_rows', None)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define mission parameters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +149,8 @@
     "iss_omm_str = '[{\"OBJECT_NAME\":\"ISS (ZARYA)\",\"OBJECT_ID\":\"1998-067A\",\"EPOCH\":\"2024-06-07T09:53:34.728000\",\"MEAN_MOTION\":15.50975122,\"ECCENTRICITY\":0.0005669,\"INCLINATION\":51.6419,\"RA_OF_ASC_NODE\":3.7199,\"ARG_OF_PERICENTER\":284.672,\"MEAN_ANOMALY\":139.0837,\"EPHEMERIS_TYPE\":0,\"CLASSIFICATION_TYPE\":\"U\",\"NORAD_CAT_ID\":25544,\"ELEMENT_SET_NO\":999,\"REV_AT_EPOCH\":45703,\"BSTAR\":0.00033759,\"MEAN_MOTION_DOT\":0.00019541,\"MEAN_MOTION_DDOT\":0}]'\n",
     "iss_omm = json.loads(iss_omm_str)[0]\n",
     "\n",
-    "basic_sensor = BasicSensor(   mass= 100.5,\n",
+    "basic_sensor = BasicSensor(   id=\"Atom\",\n",
+    "                        mass= 100.5,\n",
     "                        volume= 0.75,\n",
     "                        power= 150.0,\n",
     "                        field_of_view = CircularGeometry(diameter=60.0),\n",
@@ -141,9 +158,30 @@
     "                        bits_per_pixel= 16\n",
     "                    )\n",
     "\n",
+    "satellites=[\n",
+    "        Satellite(\n",
+    "            id=\"ISS\",\n",
+    "            orbit=GeneralPerturbationsOrbitState.from_omm(iss_omm),\n",
+    "            payloads=[\n",
+    "                basic_sensor\n",
+    "            ]\n",
+    "        )\n",
+    "    ]\n",
+    "\n",
+    "targets = UniformAngularGrid(\n",
+    "        delta_latitude=20, delta_longitude=20, region=mapping(box(-180, -50, 180, 50))\n",
+    "    ).as_targets()\n",
+    "\n",
     "mission_start = datetime(2024, 1, 1, tzinfo=timezone.utc)\n",
     "mission_duration = timedelta(hours=2)\n",
     "propagate_time_step = timedelta(minutes=0.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run propagation with TAT-C to get satellite states"
    ]
   },
   {
@@ -154,17 +192,20 @@
    },
    "outputs": [],
    "source": [
-    "# Run propagation with TAT-C to get satellite states\n",
     "def propagate_tatc(request: PropagationRequest) -> PropagationResponse:\n",
-    "    return PropagationResponse(\n",
-    "        records=collect_orbit_track(\n",
+    "    if request.propagator != Propagator.SGP4:\n",
+    "        raise RuntimeError(\"TAT-C only supports SGP4 propagator.\")\n",
+    "    orbit_tracks = Parallel(-1)(\n",
+    "        delayed(collect_orbit_track)(\n",
     "            TATC_Satellite(\n",
-    "                name=request.orbit.object_name,\n",
-    "                orbit=TwoLineElements(tle=request.orbit.to_tle()),\n",
+    "                name=satellite.id,\n",
+    "                orbit=TwoLineElements(tle=satellite.orbit.to_tle()),\n",
     "            ),\n",
-    "            TATC_Instrument(name=\"Instrument\"),\n",
+    "            TATC_Instrument(name=\"Instrument\"), # dummy entry\n",
     "            pd.date_range(\n",
-    "                request.start, request.start + request.duration, freq=request.time_step\n",
+    "                request.start,\n",
+    "                request.start + request.duration,\n",
+    "                freq=request.time_step,\n",
     "            ),\n",
     "            coordinates=(\n",
     "                OrbitCoordinate.ECI\n",
@@ -172,26 +213,37 @@
     "                else OrbitCoordinate.ECEF\n",
     "            ),\n",
     "            orbit_output=OrbitOutput.POSITION_VELOCITY,\n",
-    "        ).apply(\n",
-    "            lambda r: PropagationRecord(\n",
-    "                time=r.time,\n",
-    "                frame=request.frame,\n",
-    "                position=r.geometry.coords[0],\n",
-    "                velocity=r.velocity.coords[0],\n",
-    "                body_orientation=FixedOrientation.NADIR_GEOCENTRIC,\n",
-    "            ),\n",
-    "            axis=1,\n",
-    "        ),\n",
+    "        )\n",
+    "        for satellite in request.satellites\n",
+    "    )\n",
+    "    return PropagationResponse(\n",
+    "        **request.model_dump(exclude=\"satellite_records\"),\n",
+    "        satellite_records=[\n",
+    "            PropagationRecord(\n",
+    "                satellite_id=satellite.id,\n",
+    "                samples=orbit_tracks[i].apply(\n",
+    "                    lambda r: PropagationSample(\n",
+    "                        time=r.time,\n",
+    "                        frame=request.frame,\n",
+    "                        position=r.geometry.coords[0],\n",
+    "                        velocity=r.velocity.coords[0],\n",
+    "                    ),\n",
+    "                    axis=1,\n",
+    "                ),\n",
+    "            )\n",
+    "            for i, satellite in enumerate(request.satellites)\n",
+    "        ],\n",
     "    )\n",
     "\n",
     "\n",
     "\n",
     "request = PropagationRequest(\n",
-    "    orbit=GeneralPerturbationsOrbitState.from_omm(iss_omm),\n",
+    "    satellites=satellites,\n",
     "    start=mission_start,\n",
     "    duration=mission_duration,\n",
     "    time_step=propagate_time_step,\n",
     "    frame=CartesianReferenceFrame.ICRF,\n",
+    "    propagator=Propagator.SGP4\n",
     ")\n",
     "\n",
     "display(request.model_dump_json())\n",
@@ -202,7 +254,15 @@
     "\n",
     "propagation_data = propagation_response.as_dataframe()\n",
     "\n",
-    "display(propagation_data)\n"
+    "#display(propagation_data)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run access claculations with TAT-C to get access-periods at Target ground points. It is assumed that the sensor shall be of Circular FOV geometry. \n",
+    "Coverage analysis is not required."
    ]
   },
   {
@@ -213,111 +273,80 @@
    },
    "outputs": [],
    "source": [
-    "# Run coverage analysis with TAT-C to get access-times at Target ground points. It is assumed that the sensor shall be of Circular FOV geometry.\n",
-    "\n",
-    "def coverage_tatc(request: CoverageRequest) -> CoverageResponse:\n",
-    "    unique_ids = len(set(target.id for target in request.targets)) == len(\n",
-    "        request.targets\n",
-    "    )\n",
-    "    points = [\n",
-    "        Point(\n",
-    "            id=target.id if unique_ids and isinstance(target.id, int) else i,\n",
-    "            longitude=target.position[0],\n",
-    "            latitude=target.position[1],\n",
-    "            altitude=target.position[2] if len(target.position) > 2 else 0,\n",
-    "        )\n",
-    "        for i, target in enumerate(request.targets)\n",
-    "    ]\n",
+    "def access_tatc(request: AccessRequest) -> AccessResponse:\n",
+    "    if request.propagator != Propagator.SGP4:\n",
+    "        raise RuntimeError(\"TAT-C only supports SGP4 propagator.\")\n",
     "    satellites = [\n",
     "        TATC_Satellite(\n",
-    "            name=satellite.orbit.object_name,\n",
+    "            name=satellite.id,\n",
     "            orbit=TwoLineElements(tle=satellite.orbit.to_tle()),\n",
     "            instruments=[\n",
-    "                TATC_Instrument(name=\"Default\", field_of_regard=satellite.field_of_view)\n",
+    "                TATC_Instrument(name=str(payload.id), field_of_regard=payload.field_of_view.diameter) # assumed that the instrument has a circular FOV\n",
     "            ],\n",
     "        )\n",
     "        for satellite in request.satellites\n",
+    "        for payload in satellite.payloads \n",
+    "        if payload.id in request.payload_ids\n",
     "    ]\n",
-    "\n",
-    "    aggregated_obs = aggregate_observations(\n",
-    "        pd.concat(\n",
-    "            Parallel(-1)(\n",
-    "                delayed(collect_multi_observations)(\n",
-    "                    point,\n",
-    "                    satellites,\n",
-    "                    request.start,\n",
-    "                    request.start + request.duration,\n",
-    "                )\n",
-    "                for point in points\n",
-    "            )\n",
-    "        )\n",
-    "    )\n",
-    "    reduced_obs = reduce_observations(aggregated_obs)\n",
-    "\n",
-    "    records = list(\n",
-    "        reduced_obs.apply(\n",
-    "            lambda r: CoverageRecord(\n",
-    "                target=request.targets[\n",
-    "                    points.index(next(p for p in points if p.id == r[\"point_id\"]))\n",
-    "                ],\n",
-    "                samples=aggregated_obs[aggregated_obs.point_id == r[\"point_id\"]].apply(\n",
-    "                    lambda s: CoverageSample(start=s.start, duration=s.end - s.start),\n",
-    "                    axis=1,\n",
-    "                ),\n",
-    "                mean_revisit=(\n",
-    "                    None\n",
-    "                    if pd.isnull(r[\"revisit\"])\n",
-    "                    else timedelta(seconds=r[\"revisit\"].total_seconds())\n",
-    "                ),\n",
-    "                number_samples=r[\"samples\"],\n",
+    "    observations = Parallel(-1)(\n",
+    "        delayed(collect_multi_observations)(\n",
+    "            Point(\n",
+    "                id=i,\n",
+    "                longitude=target.position[0],\n",
+    "                latitude=target.position[1],\n",
+    "                altitude=(target.position[2] if len(target.position) > 2 else 0),\n",
     "            ),\n",
-    "            axis=1,\n",
+    "            satellites,\n",
+    "            request.start,\n",
+    "            request.start + request.duration,\n",
     "        )\n",
-    "    ) + [\n",
-    "        CoverageRecord(target=request.targets[i], mean_revisit=None, number_samples=0)\n",
-    "        for i, point in enumerate(points)\n",
-    "        if not any(reduced_obs[\"point_id\"] == point.id)\n",
-    "    ]\n",
-    "    records.sort(key=lambda r: r.target.id)\n",
-    "\n",
-    "    return CoverageResponse(\n",
-    "        records=records,\n",
-    "        harmonic_mean_revisit=(\n",
-    "            None\n",
-    "            if reduced_obs.dropna(subset=\"revisit\").empty\n",
-    "            else timedelta(\n",
-    "                seconds=hmean(\n",
-    "                    reduced_obs.dropna(subset=\"revisit\")[\"revisit\"].dt.total_seconds()\n",
+    "        for i, target in enumerate(request.targets)\n",
+    "    )\n",
+    "    return AccessResponse(\n",
+    "        **request.model_dump(exclude=\"target_records\"),\n",
+    "        target_records=[\n",
+    "            (\n",
+    "                AccessRecord(target_id=target.id)\n",
+    "                if observations[i].empty\n",
+    "                else AccessRecord(\n",
+    "                    target_id=target.id,\n",
+    "                    samples=observations[i].apply(\n",
+    "                        lambda s: AccessSample(\n",
+    "                            start=s.start, duration=s.end - s.start, satellite_id=s.satellite, instrument_id=s.instrument\n",
+    "                        ),\n",
+    "                        axis=1,\n",
+    "                    ),\n",
     "                )\n",
     "            )\n",
-    "        ),\n",
-    "        coverage_fraction=len(reduced_obs.index) / len(points),\n",
+    "            for i, target in enumerate(request.targets)\n",
+    "        ],\n",
     "    )\n",
     "\n",
-    "\n",
-    "\n",
-    "request = CoverageRequest(\n",
-    "    satellites=[\n",
-    "        Satellite(\n",
-    "            orbit=GeneralPerturbationsOrbitState.from_omm(iss_omm), field_of_view=basic_sensor.field_of_view.diameter\n",
-    "        )\n",
-    "    ],\n",
-    "    targets=UniformAngularGrid(\n",
-    "        delta_latitude=20, delta_longitude=20, region=mapping(box(-180, -50, 180, 50))\n",
-    "    ).as_targets(),\n",
+    "request = AccessRequest(\n",
+    "    satellites=satellites,\n",
+    "    targets=targets,\n",
     "    start=mission_start,\n",
     "    duration=mission_duration,\n",
+    "    propagator=Propagator.SGP4,\n",
+    "    payload_ids=[\"Atom\"]\n",
     ")\n",
     "\n",
-    "#display(request.model_dump_json())\n",
+    "display(request.model_dump_json())\n",
     "\n",
-    "coverage_response = coverage_tatc(request)\n",
+    "response = access_tatc(request)\n",
     "\n",
-    "#display(coverage_response.model_dump_json())\n",
+    "#display(response.model_dump_json())\n",
     "\n",
-    "coverage_data = coverage_response.as_dataframe()\n",
+    "access_data = response.as_dataframe()\n",
     "\n",
-    "display(coverage_data)"
+    "display(access_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run Data Metrics calculation with InstruPy"
    ]
   },
   {
@@ -487,20 +516,13 @@
    "source": [
     "display(data_metrics_response.records[33].model_dump_json())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:eosim] *",
+   "display_name": "eosim",
    "language": "python",
-   "name": "conda-env-eosim-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
