WIP: Orbitpy access example

--- a/src/orbitpy-tatc-coverage-example.ipynb
+++ b/src/orbitpy-tatc-coverage-example.ipynb
@@ -11,13 +11,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "from joblib import Parallel, delayed\n",
     "\n",
     "import warnings\n",
+    "\n",
+    "import tempfile\n",
+    "import os\n",
+    "import csv\n",
+    "\n",
+    "script_directory = os.path.dirname(os.path.abspath(\"__file__\"))\n",
+    "temp_dir = os.path.join(script_directory, \"temp\")\n",
+    "os.makedirs(temp_dir, exist_ok=True)\n",
+    "#os.environ['TMPDIR'] = temp_dir\n",
+    "\n",
     "\n",
     "import json\n",
     "from datetime import datetime, timedelta, timezone\n",
@@ -37,13 +47,14 @@
     "    reduce_observations,\n",
     ")\n",
     "\n",
-    "from orbitpy.util import OrbitState as OrbitPy_OrbitState, Spacecraft as OrbitPy_Spacecraft\n",
-    "from orbitpy.propagator import J2AnalyticalPropagator as OrbitPy_J2AnalyticalPropagator\n",
+    "from orbitpy.util import OrbitState as OrbitPy_OrbitState, Spacecraft as OrbitPy_Spacecraft, SpacecraftBus as OrbitPy_SpacecraftBus\n",
+    "from orbitpy.propagator import J2AnalyticalPropagator as OrbitPy_J2AnalyticalPropagator, SGP4Propagator as OrbitPy_SGP4Propagator\n",
     "from orbitpy.coveragecalculator import GridCoverage as OrbitPy_GridCoverage\n",
+    "from orbitpy.grid import Grid as OrbitPy_Grid\n",
     "\n",
     "from eose.orbits import GeneralPerturbationsOrbitState, Propagator\n",
     "from eose.satellites import Satellite\n",
-    "from eose.utils import CartesianReferenceFrame\n",
+    "from eose.utils import CartesianReferenceFrame, PlanetaryCoordinateReferenceSystem\n",
     "from eose.targets import TargetPoint\n",
     "from eose.geometry import Position\n",
     "\n",
@@ -73,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,20 +131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def access_tatc(request: AccessRequest) -> AccessResponse:\n",
-    "    if request.propagator != Propagator.J2:\n",
-    "        pass\n",
-    "    elif request.propagator != Propagator.SGP4:\n",
-    "        pass\n",
-    "    else:\n",
-    "        raise RuntimeError(\"OrbitPy only supports J2 and SGP4 propagators.\")\n",
+    "def access_orbitpy(request: AccessRequest) -> AccessResponse:\n",
     "\n",
     "    \n",
-    "    # Enumerate and convert from EOSE-API satellites to OrbitPy satellite objects. \n",
+    "    #### Enumerate and convert from EOSE-API satellites to OrbitPy satellite objects. ####\n",
     "    # (Enumeration generates distinct orbit-instrument pairs for satellites equipped with multiple instruments.)\n",
     "    OrbitPy_Satellites = []\n",
     "    for satellite in request.satellites:\n",
@@ -158,22 +163,59 @@
     "                                                            \"tle_line2\": tle[1]\n",
     "                                                            }})\n",
     "                \n",
+    "                # spacecraft bus attributes are presently ignored and set to default. TODO: Consider the spacecraft bus orientation.\n",
+    "                orbitpy_sat_bus = OrbitPy_SpacecraftBus.from_dict({\"orientation\":{\"referenceFrame\":\"Nadir_pointing\", \"convention\": \"REF_FRAME_ALIGNED\"}}) \n",
     "                sat = OrbitPy_Spacecraft(_id = satellite.id,\n",
     "                                    orbitState = orbit_state,\n",
-    "                                    spacecraftBus = None, # spacecraft bus attributes are presently ignored in OrbitPy TODO: Consider the spacecraftbus orientation in OrbitPy\n",
+    "                                    spacecraftBus = orbitpy_sat_bus, \n",
     "                                    instrument = [instrupy_sensor]\n",
     "                                )\n",
     "                warnings.warn(\"OrbitPy ignores spacecraft bus orientation, and assumes it to be aligned to the geocentric Nadir pointing frame.\", UserWarning)\n",
     "                \n",
     "                print(\"\\n\", sat, \"\\n\")\n",
     "                OrbitPy_Satellites.append(sat)\n",
-    "\n",
-    "\n",
-    "                \n",
-    "\n",
-    "\n",
-    "    # run propagation with OrbitPy\n",
     "    \n",
+    "    #### Format the Target points into OrbitPy Grid object ####\n",
+    "    lon = []\n",
+    "    lat = []\n",
+    "    # iterate through the Target points\n",
+    "    for tp in request.targets:\n",
+    "        if tp.crs == PlanetaryCoordinateReferenceSystem.EPSG_4326 or tp.crs is None:\n",
+    "            lon.append(tp.position[0])\n",
+    "            lat.append(tp.position[1])\n",
+    "        else:\n",
+    "            raise ValueError(f\"{tp.crs} CRS is not supported by OrbitPy. Only 'EPSG_4326' CRS is supported.\")\n",
+    "    with tempfile.NamedTemporaryFile(mode='w+t', delete=False, dir=temp_dir) as grid_file:\n",
+    "        writer = csv.writer(grid_file)\n",
+    "        writer.writerow(['lat [deg]', 'lon [deg]'])\n",
+    "        for lat, lon in zip(lat, lon):\n",
+    "            writer.writerow([lat, lon])\n",
+    "    \n",
+    "    orbitpy_custom_grid = OrbitPy_Grid.from_dict({\"@type\": \"autogrid\", \"covGridFilePath\": grid_file})\n",
+    "\n",
+    "    \n",
+    "    #### run propagation and coverage with OrbitPy ####\n",
+    "    if request.propagator != Propagator.J2:\n",
+    "        propagator = OrbitPy_J2AnalyticalPropagator.from_dict({\"@type\": \"J2 ANALYTICAL PROPAGATOR\", \"stepSize\": request.time_step.total_seconds()})\n",
+    "    elif request.propagator != Propagator.SGP4:\n",
+    "        propagator = OrbitPy_SGP4Propagator.from_dict({\"@type\": \"SGP4 PROPAGATOR\", \"stepSize\": request.time_step.total_seconds()})\n",
+    "    else:\n",
+    "        raise RuntimeError(\"OrbitPy only supports J2 and SGP4 propagators.\")\n",
+    "            \n",
+    "    duration = request.duration.total_seconds() / 86400.0\n",
+    "    for orbitpy_sat in OrbitPy_Satellites:\n",
+    "\n",
+    "        # run propagation with OrbitPy\n",
+    "        with tempfile.NamedTemporaryFile(mode='w+t', delete=False,dir=temp_dir) as state_cart_file: # store satellite states in a temporary file.\n",
+    "            propagator.execute(orbitpy_sat, None, state_cart_file.name, None, duration)\n",
+    "        \n",
+    "            # run access calculations with OrbitPy\n",
+    "            with tempfile.NamedTemporaryFile(mode='w+t', delete=False,dir=temp_dir) as access_fl:\n",
+    "                cov_calc = OrbitPy_GridCoverage(grid=orbitpy_custom_grid, spacecraft=orbitpy_sat, state_cart_file=state_cart_file.name)\n",
+    "                cov_calc.execute(instru_id=orbitpy_sat.get_instrument().get_id(), mode_id=None, use_field_of_regard=True, out_file_access=access_fl.name, mid_access_only=False)\n",
+    "    \n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -194,7 +236,7 @@
     "\n",
     "#display(request.model_dump_json())\n",
     "\n",
-    "access_response = access_tatc(request)\n",
+    "access_response = access_orbitpy(request)\n",
     "\n",
     "#display(access_response.model_dump_json())\n",
     "\n",
