--- a/src/orbitpy-tatc-coverage-example.ipynb
+++ b/src/orbitpy-tatc-coverage-example.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "import warnings\n",
     "\n",
     "import tempfile\n",
-    "import os\n",
+    "import os, shutil\n",
     "import csv\n",
     "\n",
     "script_directory = os.path.dirname(os.path.abspath(\"__file__\"))\n",
@@ -49,7 +49,7 @@
     "\n",
     "from orbitpy.util import OrbitState as OrbitPy_OrbitState, Spacecraft as OrbitPy_Spacecraft, SpacecraftBus as OrbitPy_SpacecraftBus\n",
     "from orbitpy.propagator import J2AnalyticalPropagator as OrbitPy_J2AnalyticalPropagator, SGP4Propagator as OrbitPy_SGP4Propagator\n",
-    "from orbitpy.coveragecalculator import GridCoverage as OrbitPy_GridCoverage\n",
+    "from orbitpy.coveragecalculator import GridCoverage as OrbitPy_GridCoverage, find_access_intervals as OrbitPy_find_access_intervals\n",
     "from orbitpy.grid import Grid as OrbitPy_Grid\n",
     "\n",
     "from eose.orbits import GeneralPerturbationsOrbitState, Propagator\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,13 +149,13 @@
     "                    # TODO: Update to accept general instrument FOV geometries and orientation\n",
     "                    instrupy_sensor = InstruPy_Instrument.from_dict({ \"@type\": \"Basic Sensor\",\n",
     "                        \"orientation\": {\"referenceFrame\": \"SC_BODY_FIXED\", \"convention\": \"REF_FRAME_ALIGNED\"},\n",
-    "                        \"fieldOfViewGeometry\": {\"shape\": \"CIRCULAR\", \"diameter\": instru.field_of_view.diameter}\n",
+    "                        \"fieldOfViewGeometry\": {\"shape\": \"CIRCULAR\", \"diameter\": instru.field_of_view.diameter},\n",
+    "                        \"@id\": instru.id\n",
     "                    })\n",
     "                else:\n",
     "                    raise ValueError(f\"{instru_type} instrument type is not supported. Only 'BasicSensor' instrument type is supported.\")\n",
     "                \n",
     "                tle = satellite.orbit.to_tle()\n",
-    "                print(tle)\n",
     "\n",
     "                orbit_state = OrbitPy_OrbitState.from_dict({\"tle\": {\n",
     "                                                            \"tle_line0\": \"Unknown\",\n",
@@ -170,49 +170,93 @@
     "                                    spacecraftBus = orbitpy_sat_bus, \n",
     "                                    instrument = [instrupy_sensor]\n",
     "                                )\n",
-    "                warnings.warn(\"OrbitPy ignores spacecraft bus orientation, and assumes it to be aligned to the geocentric Nadir pointing frame.\", UserWarning)\n",
-    "                \n",
-    "                print(\"\\n\", sat, \"\\n\")\n",
+    "                warnings.warn(\"OrbitPy ignores spacecraft bus orientation, and assumes it to be aligned to the geocentric Nadir pointing frame.\", UserWarning)                \n",
     "                OrbitPy_Satellites.append(sat)\n",
     "    \n",
     "    #### Format the Target points into OrbitPy Grid object ####\n",
     "    lon = []\n",
     "    lat = []\n",
+    "    target_id = [] \n",
     "    # iterate through the Target points\n",
     "    for tp in request.targets:\n",
     "        if tp.crs == PlanetaryCoordinateReferenceSystem.EPSG_4326 or tp.crs is None:\n",
     "            lon.append(tp.position[0])\n",
     "            lat.append(tp.position[1])\n",
+    "            target_id.append(tp.id)\n",
     "        else:\n",
     "            raise ValueError(f\"{tp.crs} CRS is not supported by OrbitPy. Only 'EPSG_4326' CRS is supported.\")\n",
+    "    \n",
+    "    row_to_target_id = {} # Dictionary to map row numbers ('GP index' in OrbitPy) to target_id\n",
+    "    orbitpy_custom_grid = None\n",
     "    with tempfile.NamedTemporaryFile(mode='w+t', delete=False, dir=temp_dir) as grid_file:\n",
     "        writer = csv.writer(grid_file)\n",
-    "        writer.writerow(['lat [deg]', 'lon [deg]'])\n",
-    "        for lat, lon in zip(lat, lon):\n",
-    "            writer.writerow([lat, lon])\n",
+    "        writer.writerow(['lat [deg]', 'lon [deg]', 'id'])\n",
+    "        \n",
+    "        for row_num, (lat_val, lon_val, target_id_val) in enumerate(zip(lat, lon, target_id)):\n",
+    "            writer.writerow([lat_val, lon_val, target_id_val])\n",
+    "            row_to_target_id[row_num] = target_id_val\n",
     "    \n",
-    "    orbitpy_custom_grid = OrbitPy_Grid.from_dict({\"@type\": \"autogrid\", \"covGridFilePath\": grid_file})\n",
+    "\n",
+    "    orbitpy_custom_grid = OrbitPy_Grid.from_customgrid_dict({\"@type\": \"customGrid\", \"covGridFilePath\": grid_file.name})\n",
     "\n",
     "    \n",
     "    #### run propagation and coverage with OrbitPy ####\n",
+    "    step_size_s = request.time_step.total_seconds()\n",
     "    if request.propagator != Propagator.J2:\n",
-    "        propagator = OrbitPy_J2AnalyticalPropagator.from_dict({\"@type\": \"J2 ANALYTICAL PROPAGATOR\", \"stepSize\": request.time_step.total_seconds()})\n",
+    "        propagator = OrbitPy_J2AnalyticalPropagator.from_dict({\"@type\": \"J2 ANALYTICAL PROPAGATOR\", \"stepSize\": step_size_s})\n",
     "    elif request.propagator != Propagator.SGP4:\n",
-    "        propagator = OrbitPy_SGP4Propagator.from_dict({\"@type\": \"SGP4 PROPAGATOR\", \"stepSize\": request.time_step.total_seconds()})\n",
+    "        propagator = OrbitPy_SGP4Propagator.from_dict({\"@type\": \"SGP4 PROPAGATOR\", \"stepSize\": step_size_s})\n",
     "    else:\n",
     "        raise RuntimeError(\"OrbitPy only supports J2 and SGP4 propagators.\")\n",
     "            \n",
+    "    start_date_dict = {\"@type\": \"GREGORIAN_UT1\", \"year\": request.start.year, \"month\": request.start.month, \"day\": request.start.day, \"hour\": request.start.hour, \"minute\": request.start.minute, \"second\": request.start.second + request.start.microsecond / 1000000.0}\n",
+    "    start_date = OrbitPy_OrbitState.date_from_dict(start_date_dict) # assumed that the time scale is UT1\n",
     "    duration = request.duration.total_seconds() / 86400.0\n",
+    "    \n",
     "    for orbitpy_sat in OrbitPy_Satellites:\n",
     "\n",
     "        # run propagation with OrbitPy\n",
     "        with tempfile.NamedTemporaryFile(mode='w+t', delete=False,dir=temp_dir) as state_cart_file: # store satellite states in a temporary file.\n",
-    "            propagator.execute(orbitpy_sat, None, state_cart_file.name, None, duration)\n",
+    "            propagator.execute(orbitpy_sat, start_date, state_cart_file.name, None, duration)\n",
     "        \n",
     "            # run access calculations with OrbitPy\n",
     "            with tempfile.NamedTemporaryFile(mode='w+t', delete=False,dir=temp_dir) as access_fl:\n",
     "                cov_calc = OrbitPy_GridCoverage(grid=orbitpy_custom_grid, spacecraft=orbitpy_sat, state_cart_file=state_cart_file.name)\n",
-    "                cov_calc.execute(instru_id=orbitpy_sat.get_instrument().get_id(), mode_id=None, use_field_of_regard=True, out_file_access=access_fl.name, mid_access_only=False)\n",
+    "                instru_id = orbitpy_sat.get_instrument().get_id()\n",
+    "                cov_calc.execute(instru_id=instru_id, mode_id=None, use_field_of_regard=True, out_file_access=access_fl.name, mid_access_only=False)\n",
+    "                intervals_df = OrbitPy_find_access_intervals(access_fl.name)\n",
+    "                \n",
+    "                \n",
+    "                grouped_intervals = intervals_df.groupby('GP index')\n",
+    "                access_record = [] # record of accesses at each target point\n",
+    "                for gp_index, group in grouped_intervals:\n",
+    "                    # Iterate over each record in the group\n",
+    "                    access_sample = []\n",
+    "                    for index, row in group.iterrows():\n",
+    "                        access_start = request.start + timedelta(seconds=row['Start time index']*step_size_s) \n",
+    "                        access_duration = timedelta(seconds=row['Duration']*step_size_s) \n",
+    "                        # form access sample\n",
+    "                        access_sample.append(AccessSample(\n",
+    "                            satellite_id=orbitpy_sat._id,\n",
+    "                            instrument_id=instru_id,\n",
+    "                            start=access_start,\n",
+    "                            duration=access_duration\n",
+    "                        ))\n",
+    "                    # Add access record\n",
+    "                    access_record.append(AccessRecord(\n",
+    "                        target_id=row_to_target_id[gp_index],\n",
+    "                        samples=access_sample\n",
+    "                    ))\n",
+    "    \n",
+    "    # delete the temporary directory\n",
+    "    shutil.rmtree(temp_dir)\n",
+    "    \n",
+    "    return AccessResponse(\n",
+    "            **request.model_dump(exclude=\"target_records\"),\n",
+    "            target_records=access_record\n",
+    "        )\n",
+    "\n",
+    "                    \n",
     "    \n",
     "\n",
     "\n",
@@ -240,9 +284,9 @@
     "\n",
     "#display(access_response.model_dump_json())\n",
     "\n",
-    "#access_data = access_response.as_dataframe()\n",
+    "access_data = access_response.as_dataframe()\n",
     "\n",
-    "#display(access_data)"
+    "display(access_data)"
    ]
   },
   {
